--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve --port 4200",
     "build": "ng build",
+    "vercel-build": "npm install && ng build --configuration production",
     "test": "ng test",
     "lint": "ng lint"
   },
